# colav-unsafe-set

./: .gitignore  .poetryignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
colav_unsafe_set_gen.egg-info/: PKG-INFO
src/: main.py
src/risk_assesment/: __init__.py  risk_assesment.py
tests/indices_of_interest/: test_indices_of_interest.py
unsafe_set_gen/: main.py  unsafe_set.py
unsafe_set_gen/unsafe_set/: unsafe_set.py
